--- a/Layout Fixed/css/styles.css
+++ b/Layout Fixed/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 #container {
 
-	width: 1200px;
+	max-width: 1200px;
 	margin: auto;
 	box-shadow: 0px 0px 5px #9999;
 }
@@ -17,13 +17,13 @@ body {
 header#top {
 
 	background: #e0ddd4;
-	padding: 20px 70px;
+	padding: 1.6% 5.83%;
 }
 
 #logo {
 	float: left;
 }
-nav {
+header nav {
 	float: right;
 }
 header nav ul {
@@ -72,16 +72,38 @@ a[href$="twitter.com"] {
 }
 
 .col_720 {
-	width: 720px;
+	width: 60%;
 	float: left;
 	margin-right: 80px;
 
 }
 .col_260 {
-	width: 260px;
+	width: 21.6%;
 	float: left;
 	overflow: hidden;
 	position: relative;
+}
+
+.col_320{
+	width: 26.6%;
+	float: left;
+}
+
+.col_320:nth-child(2) {
+margin: 0 50px;
+
+}
+
+footer ul {
+	padding: 0;
+	list-style-type: none;
+	columns: 50px 2;
+	-webkit-columns: 50px 2;
+	-moz-columns: 50px 2;
+}
+
+img {
+	width: 100%;
 }
 
 .imgQuote {
@@ -95,6 +117,8 @@ a[href$="twitter.com"] {
 	padding: 20px;
 }
 
+
+
 aside {
 	background: #e0ddd4;
 
@@ -106,12 +130,11 @@ footer {
 }
 
 .wrap {
-	padding: 75px 70px;
+	padding: 6.25% 5.83%;
 }
 
 .clearflt{
-
-	clear:both;
+	clear: both;
 }
 
 /* TEXT ELEMENTS */
@@ -149,4 +172,19 @@ a:link {
 	text-decoration: none;
 	color: #189893; /* Blue */
 
+}
+
+@media screen and (max-width: 660px) {
+	.col_720 {
+		float: none;
+		width: 100%;
+		padding-bottom: 40px;
+		border-bottom: 1px solid #333;
+		margin-bottom: 40px;
+	}
+	.col_260 {
+		float: none;
+		width: 60%;
+		margin: auto;
+	}
 }
